<resources>
    <string name="app_name">GOT Mobile</string>

    <string name="mountain_range_image">Mountain Range Image</string>
    <string name="selected_mountain_range_photo">Selected Mountain Range photo</string>
    <string name="start_input_text_hint">Start</string>
    <string name="end_input_text_hint">Koniec</string>
    <string name="location_marker_icon">Location marker icon</string>

    <string name="start_point_label">Wybierz punkt początkowy</string>
    <string name="end_point_label">Wybierz punkt końcowy</string>
    <string name="via_point_label">Wybierz punkt pośredni</string>
    <string name="summary">Podsumowanie</string>
    <string name="path">Odcinek</string>
    <string name="got">GOT</string>
    <string name="add_via_point_menu">Dodaj punkt pośredni</string>
    <string name="via_input_text_hint">Przez</string>
    <string name="button_save_path">Zapisz</string>
    <string name="button_continue">Kontynuuj</string>
    <string name="dialog_success_content">Stworzoną trasę możesz znaleźć na panelu głównym.</string>
    <string name="dialog_success_title">Pomyślnie zapisano!</string>
    <string name="dialog_failure_title">Błąd serwera!</string>
    <string name="dialog_failure_content">Trasa nie została zapisana, spróbuj ponownie.</string>
    <string name="alert_dialog_failed_to_connect">Nie udało się nawiązać połączenia z serwerem.</string>
    <string name="login_photo_description">Login photo, mountain panorama</string>
    <string name="email_hint">E-mail</string>
    <string name="haslo_hint">Hasło</string>
    <string name="button_login">Zaloguj</string>
    <string name="login_screen_title">Zaloguj się</string>
    <string name="login_failure_message">Podane dane są nieprawidłowe, spróbuj ponownie!</string>
    <string name="got_points_label">Punkty GOT:</string>
</resources>
